# 2024-1-VSA--

./: README.md
.github/workflows/: ci-cd.yml
FE/FE/BlurStreaming/: Info.plist
FE/FE/BlurStreaming.xcodeproj/: project.pbxproj
FE/FE/BlurStreamingTests/: BlurStreamingTests.swift
FE/FE/BlurStreamingUITests/: BlurStreamingUITests.swift  BlurStreamingUITestsLaunchTests.swift
FE/TestBE/: manage.py
FE/TestBE/ABND/: asgi.py  settings.py  urls.py  wsgi.py
FE/TestBE/testapp/: urls.py  views.py
model/: readme.md  requirements.txt
model/baselinewithfacenet/: args.py  detection.py  main.py  ml_part.py  requirements.txt  util.py
model/baselinewithfacenet/database/: face_db
model/baselinewithfacenet/mtcnn/: args.py  detection.py  main.py  util.py
model/opencv/: README.md
model/opencv/unknown/: face_alignment_dlib.py  face_classifier.py  person_db.py
server/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
server/.github/workflows/: ci-cd.yml
server/accounts/: models.py  serializers.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py
server/alembic/: env.py
server/app/: main.py
server/app/core/: config.py
server/app/db/: session.py
server/app/models/: __init__.py  user.py
server/app/routers/: user.py  video.py
server/app/schemas/: user.py
server/app/services/: user_service.py  video_service.py
server/config/: settings.py  urls.py
server/scripts/: deploy.sh
server/video/: detection.py  models.py  processing.py  serializers.py  urls.py  utils.py  views.py
(+34 files in other folders)
