[tool.poetry]
name = "a2b1-server"
version = "0.1.0"
description = ""
authors = ["choijian <an032944@daum.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
middleware = "^1.2.3"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.0"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
